--- a/gettingOverIsabelle/mainwindow.ui
+++ b/gettingOverIsabelle/mainwindow.ui
@@ -293,6 +293,7 @@
     <property name="title">
      <string>File</string>
     </property>
+    <addaction name="actionJouer"/>
     <addaction name="actionQuitter"/>
    </widget>
    <widget class="QMenu" name="menu">
@@ -317,13 +318,18 @@
     <string>Quitter</string>
    </property>
   </action>
+  <action name="actionJouer">
+   <property name="text">
+    <string>Jouer</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
  <connections>
   <connection>
-   <sender>menuQuitter</sender>
-   <signal>triggered(QAction*)</signal>
+   <sender>actionQuitter</sender>
+   <signal>triggered()</signal>
    <receiver>MainWindow</receiver>
    <slot>close()</slot>
    <hints>
@@ -366,6 +372,22 @@
     <hint type="destinationlabel">
      <x>399</x>
      <y>299</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionJouer</sender>
+   <signal>triggered()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>close()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>511</x>
+     <y>383</y>
     </hint>
    </hints>
   </connection>
